--- a/week5/Amazon/Gemfile
+++ b/week5/Amazon/Gemfile
@@ -32,7 +32,7 @@ gem 'pry-rails', '~> 0.3.9'
 gem 'cowsay', '~> 0.3.0'
 
 gem "haml-rails", "~> 2.0"
-
+gem 'delayed_job_active_record'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
